# service-robot-ai

./: .gitignore
configuration/: bashrc
control_panel/: CMakeLists.txt  package.xml
control_panel/include/control/: Agent.h  AgentCommand.capnp.c++  AgentCommand.capnp.h  AgentCommandMsg.capnp  AgentCommandMsg.capnp.c++  AgentCommandMsg.capnp.h  Communication.h  ControlPanel.h  ExecutableRegistry.h  Process.h  SpeechActMsg.capnp  SpeechActMsg.capnp.c++  SpeechActMsg.capnp.h  Talker.h
control_panel/include/control/containers/: AgentCommand.h  ContainerUtils.h  SpeechAct.h
control_panel/resources/: resources.qrc
control_panel/src/: Agent.cpp  Communication.cpp  ContainerUtils.cpp  ControlPanel.cpp  ExecutableRegistry.cpp  Process.cpp  Talker.cpp
control_panel/ui/: Agent.ui  ControlPanel.ui  Process.ui
doc/eval/: how_to_start_eval.md
doc/latex/: AlicaClient.tex  Appendix.tex  Foundations.tex  Introduction.tex  ProcMan.tex  Software_Reference_Book.tex
etc/: Alica.conf  AlicaCapnzProxy.conf  Chatbot.conf  ControlPanel.conf  Globals.conf  Local.conf  ObjectDetection.conf  Objects.conf  ProcessManaging.conf  RobotControl.conf  SRGSim.conf  SRGWorldModel.conf  Talker.conf  Voice.conf
etc/asp-test-stuff/: Test.lp  household.lp
etc/plans/: Human.pml  Human.pmlex  Operate.pml  Operate.pmlex  Serve.pml  Serve.pmlex  ServeMaster.pml  ServeMaster.pmlex  Transport.pml  Transport.pmlex
etc/roles/: ServiceRobotsRoleSet.rst
pm_control_capnzero/: CMakeLists.txt  package.xml  package.xmlout
pm_control_capnzero/include/pm_control/: Communication.h  ControlledExecutable.h  ControlledProcessManager.h  ControlledRobot.h  PMControl.h
pm_control_capnzero/include/pm_widget/: ControlledExecutable.h  ControlledProcessManager.h  ControlledRobot.h
pm_control_capnzero/src/pm_control/: Communication.cpp  ControlledExecutable.cpp  ControlledProcessManager.cpp  ControlledRobot.cpp  PMControl.cpp
pm_control_capnzero/src/pm_widget/: ControlledExecutable.cpp  ControlledProcessManager.cpp  ControlledRobot.cpp
process_manager_capnzero/: CMakeLists.txt  package.xml
process_manager_capnzero/include/process_manager/: Communication.h  ExecutableMetaData.h  ManagedExecutable.h  ManagedRobot.h  ProcessCommandMsg.capnp  ProcessCommandMsg.capnp.c++  ProcessCommandMsg.capnp.h  ProcessManager.h  ProcessStatMsg.capnp  ProcessStatMsg.capnp.c++  ProcessStatMsg.capnp.h  ProcessStatsMsg.capnp  ProcessStatsMsg.capnp.c++  ProcessStatsMsg.capnp.h  RobotExecutableRegistry.h  RobotMetaData.h
process_manager_capnzero/include/process_manager/containers/: ContainerUtils.h  ProcessCommand.h  ProcessStat.h  ProcessStats.h
process_manager_capnzero/src/: Communication.cpp  ContainerUtils.cpp  ExecutableMetaData.cpp  ManagedExecutable.cpp  ManagedRobot.cpp  ProcessManager.cpp  RobotExecutableRegistry.cpp  RobotMetaData.cpp
robot_control_capnzero/: CMakeLists.txt  package.xml  package.xmlout
robot_control_capnzero/include/robot_control/: Communication.h  Robot.h  RobotCommandMsg.capnp  RobotCommandMsg.capnp.c++  RobotCommandMsg.capnp.h  RobotsControl.h
robot_control_capnzero/include/robot_control/containers/: ContainerUtils.h  RobotCommand.h
robot_control_capnzero/src/robot_control/: Communication.cpp  ContainerUtils.cpp  Robot.cpp  RobotsControl.cpp
speech_act/: CMakeLists.txt  package.xml
speech_act/include/srg/: SpeechActMsg.capnp  SpeechActMsg.capnp.c++  SpeechActMsg.capnp.h  Talker.h
speech_act/include/srg/containers/: ContainerUtils.h  SpeechAct.h
speech_act/src/: Talker.cpp
speech_act/src/containers/: ContainerUtils.cpp
srg_agent/: CMakeLists.txt  package.xml
srg_agent/include/srg/: Agent.h
srg_agent/include/srg/agent/: Movement.h  ObjectSearch.h  Path.h  SearchCell.h  SearchCellSorter.h  Voice.h
srg_agent/src/: Agent.cpp  Movement.cpp  ObjectSearch.cpp  Path.cpp  SearchCell.cpp  SearchCellSorter.cpp  Voice.cpp
srg_agent_msgs/: CMakeLists.txt  package.xml
srg_agent_msgs/include/srg/agent/: AgentCommandMsg.capnp  AgentCommandMsg.capnp.c++  AgentCommandMsg.capnp.h  SpeechActMsg.capnp  SpeechActMsg.capnp.c++  SpeechActMsg.capnp.h
srg_agent_msgs/include/srg/agent/containers/: AgentCommand.h  ContainerUtils.h  SpeechAct.h
srg_agent_msgs/src/: ContainerUtils.cpp  SpeechAct.cpp
srg_base/: CMakeLists.txt  package.xml
srg_base/include/: Base.h
srg_expressions/: CMakeLists.txt  package.xml
srg_msgs/: CMakeLists.txt  package.xml
srg_robot/: CMakeLists.txt
srg_worldmodel/: CMakeLists.txt  package.xml
srg_worldmodel/include/srg/: SRGWorldModel.h
srg_worldmodel/include/srg/asp/: ASPTranslator.h  Generator.h  SRGKnowledgeManager.h
srg_worldmodel/include/srg/conceptnet/: CNManager.h  Concept.h  ConceptNet.h  ConceptPath.h  Edge.h  EdgeTranslator.h  Relations.h
srg_worldmodel/include/srg/container/: SpeechAct.h
srg_worldmodel/include/srg/dialogue/: AnswerGraph.h  BasicHumanNeeds.h  CommandHandler.h  DialogueManager.h  IdleTask.h  InformHandler.h  ManipulationTask.h  MoveTask.h  QuestionHandler.h  RequestHandler.h  SpeechAct.h  Task.h  TaskHandler.h  TransportTask.h
srg_worldmodel/include/srg/tasks/: CommandHandler.h  Task.h  TaskFactory.h  TaskHandler.h  TaskSequence.h  TaskType.h
srg_worldmodel/include/srg/wm/: BasicHumanNeeds.h  Communication.h  RawSensorData.h  SRGSimData.h  Search.h
srg_worldmodel/src/: BasicHumanNeeds.cpp  Communication.cpp  RawSensorData.cpp  SRGWorldModel.cpp
srg_worldmodel/src/asp/: ASPTranslator.cpp  Generator.cpp  SRGKnowledgeManager.cpp
srg_worldmodel/src/conceptnet/: Concept.cpp  ConceptNet.cpp  ConceptPath.cpp  Edge.cpp  EdgeTranslator.cpp
srg_worldmodel/src/dialogue/: AnswerGraph.cpp  BasicHumanNeeds.cpp  CommandHandler.cpp  DialogueManager.cpp  IdleTask.cpp  InformHandler.cpp  ManipulationTask.cpp  MoveTask.cpp  QuestionHandler.cpp  RequestHandler.cpp  SpeechAct.cpp  Task.cpp  TaskHandler.cpp  TransportTask.cpp
srg_worldmodel/src/tasks/: CommandHandler.cpp  Task.cpp  TaskFactory.cpp  TaskHandler.cpp  TaskSequence.cpp  TaskType.cpp
srg_worldmodel/src/wm/: Communication.cpp  RawSensorData.cpp  SRGSimData.cpp  Search.cpp
(+154 files in other folders)
