<?xml version="1.0"?>
<package format="2">
  <name>control_panel</name>
  <version>0.0.0</version>
  <description>The control_panel package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <depend>process_manager_capnzero</depend>
  <depend>capnzero</depend>
  <depend>alica_engine</depend>
  <depend>id_manager</depend>
  <depend>id_capnzero</depend>
  <depend>alica_capnzero_proxy</depend>
  <depend>srg_agent_msgs</depend>
  <depend>srg_agent</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
