<?xml version="1.0"?>
<package format="2">
  <name>speech_act</name>
  <version>0.0.0</version>
  <description>The srg_msgs package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <depend>srg_msgs</depend>
  <depend>capnzero</depend>
  <depend>event_handling</depend>
  <depend>system_config</depend>
  <depend>id_manager</depend>
  <depend>srg_worldmodel</depend>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>