<?xml version="1.0"?>
<package format="2">
  <name>srg_worldmodel</name>
  <version>0.0.0</version>
  <description>The srg_worldmodel package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem</maintainer>

  <license>MIT</license>

  <author email="info@das-lab.net">Carpe Noctem</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>system_config</depend>
  <depend>alica_engine</depend>
  <depend>event_handling</depend>
  <depend>world_model</depend>
  <depend>asp_solver_wrapper</depend>
  <depend>asp_solver</depend>
  <depend>asp_commons</depend>
  <depend>capnzero</depend>
  <depend>telegram-client</depend>
  <depend>id_manager</depend>
  <depend>srg_msgs</depend>
  <depend>knowledge_manager</depend>
  <depend>control_panel</depend>

  <export>
  </export>
</package>
